src/test/ui/span/E0204.stderr
error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/E0204.rs:15:6
   |
12 |     foo: Vec<u32>,
   |     ------------- this field does not implement `Copy`
...
15 | impl Copy for Foo { }
   |      ^^^^

error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/E0204.rs:27:6
   |
23 |     Bar { x: Vec<u32> },
   |           ----------- this field does not implement `Copy`
...
27 | impl Copy for EFoo { }
   |      ^^^^

error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/E0204.rs:17:10
   |
17 | #[derive(Copy)]
   |          ^^^^
18 | struct Foo2<'a> {
19 |     ty: &'a mut bool,
   |     ---------------- this field does not implement `Copy`

error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/E0204.rs:29:10
   |
29 | #[derive(Copy)]
   |          ^^^^
30 | enum EFoo2<'a> {
31 |     Bar(&'a mut bool),
   |         ------------- this field does not implement `Copy`

error: aborting due to 4 previous errors

